[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/enemies/zorgoth/Zorgoth.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/zorgoth/sprites/demon-idle.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/zorgoth/sprites/demon-attack.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/AttackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/AttackSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BreathArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/IdleSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31, 47 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 28 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 31, 47 )

[node name="Zorgoth" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 2
collision_mask = 12
script = ExtResource( 1 )
health = 10

[node name="Sprites" type="Node2D" parent="."]

[node name="IdleSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )
hframes = 6

[node name="AttackSprite" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( -32, -20 )
texture = ExtResource( 3 )
hframes = 11
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 3 )
anims/hit = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -19, 11 )
shape = SubResource( 5 )

[node name="AttackCD" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BreathArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -90, 30 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreathArea"]
shape = SubResource( 6 )
disabled = true

[node name="PlayerHit" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -19, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHit"]
shape = SubResource( 7 )

[node name="BreathRayCast" type="RayCast2D" parent="."]
position = Vector2( -16, 32 )
enabled = true
cast_to = Vector2( -120, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -19, 11 )
scale = Vector2( 3.1, 4.7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="HitAnimationPlayer" to="." method="_on_HitAnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
[connection signal="body_entered" from="BreathArea" to="." method="_on_BreathArea_body_entered"]
[connection signal="body_entered" from="PlayerHit" to="." method="_on_PlayerHit_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
